--- a/heroku.yml
+++ b/heroku.yml
@@ -1,4 +1,4 @@
- #heroku.yml file data to run Container   y
+ #heroku.yml file data to run Container   
  build:
    docker:
        web: lib/Dockerfile
