--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "SHANUWA MD V2",
   "description": "Simple WhatsApp Bot",
-  "logo":"",
+  "logo":"https://telegra.ph/file/38aacfb3fe9374930f978.jpg",
   "keywords": ["shanuwa", "TaifiV2", "Taifur MD","Taif MD","Taifur","wasitech"],
   "success_url": "/",
   "stack": "container",
