--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     },
      "THEME" : { 
       "description": "ADD YOUR FAVORITE THEME AVAILABLE THEME ARE E.G BTS ,WASI ,SIGMA, ISLAMIC theme name should be capital latter's  ",
-      "value": "WASI",
+      "value": "SHANUWA",
       "required" : false 
     },
     
